# worker

./: .gitignore  2_otchet_o_proxozhdenii_praktiki.docx  Makefile  README.md  pyproject.toml
docs/ARC42/: 01_Introduction_and_Goals.md  02_Constraints.md  03_Context_and_Scope.md  04_Solution_Strategy.md  05_Building_Block_View.md  06_Runtime_View.md  08_Crosscutting_Concepts.md  09_Architecture_Decisions.md  10_Quality_Requirements.md  12_Glossary.md  README.md
docs/C4/: system_context.puml  technical_context.puml
docs/CDM/: domain_model.puml
docs/Requirements/: FR01_Управление сотрудниками.md  FR03_Просмотр сотрудников со стажем более N лет.md  FR04_Управление справочником позиций сотрудников.md  Feature (шаблон).md  Аналитический_обзор_приложения_Employees.md  Оценка_целевой_организации.md
src/employees/: __init__.py  composition_root.py  main.py
src/employees/adapters/input/: cli.py  cli_builder.py
src/employees/adapters/output/: id_generator.py  in_memory_repository.py  time_provider.py
src/employees/application/: messages.py
src/employees/application/ports/: input.py
src/employees/application/usecases/: employee_create.py  employee_delete.py  employee_list.py  employee_show.py  employee_tenure.py  employee_update.py  hello_world.py  position_create.py  position_delete.py  position_list.py  position_show.py  position_update.py  shared.py
src/employees/domain/: constants.py  entities.py
src/employees/domain/ports/: out.py
src/employees/ui/: splash.py
