[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "employees"
version = "0.1.0"
description = "Учебный проект по управлению организационной структурой"
readme = "README.md"
dependencies = ["punq==0.7.0", "typer", "pydantic"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
employees = "employees.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
